--- a/desktopApp/src/main/resources/view/signIn.fxml
+++ b/desktopApp/src/main/resources/view/signIn.fxml
@@ -8,43 +8,52 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.Region?>
-<VBox alignment="center" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.signIn.SignInController">
-    <VBox alignment="TOP_CENTER">
-        <Label fx:id="nameLabel" VBox.vgrow="ALWAYS" maxHeight="Infinity" text="Фамилия Имя Отчество"/>
-        <TextField fx:id="nameInput" VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
-        <Label fx:id="groupLabel" VBox.vgrow="ALWAYS" maxHeight="Infinity" text="Группа"/>
-        <TextField fx:id="groupInput" VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
-        <HBox>
-            <Region HBox.hgrow="ALWAYS" />
-            <BorderPane>
-                <padding>
-                    <Insets top="20" right="20" bottom="20" left="20"/>
-                </padding>
-                <top>
-                    <Label fx:id="configLabel" text="Конфигурация"/>
-                </top>
-                <left>
-                    <Button fx:id="localConfigButton" text="Конфигуратор"/>
-                </left>
-                <right>
-                    <Button fx:id="serverConfigButton" text="Сервер"/>
-                </right>
-            </BorderPane>
-            <BorderPane>
-                <padding>
-                    <Insets top="20" right="20" bottom="20" left="20"/>
-                </padding>
-                <top>
-                    <Label fx:id="runLabel" text="Запуск лабораторной работы"/>
-                </top>
-                <left>
-                    <Button fx:id="localRunButton" text="Локальный"/>
-                </left>
-                <right>
-                    <Button fx:id="serverRunButton" text="Удалённый"/>
-                </right>
-            </BorderPane>
-            <Region HBox.hgrow="ALWAYS" />
-        </HBox>
-    </VBox>
-</VBox>
+<?import javafx.stage.Stage?>
+<?import javafx.scene.Scene?>
+
+<Stage title="VVDram" minWidth="500" minHeight="300" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.signIn.SignInController">
+    <scene>
+        <Scene>
+            <VBox alignment="center">
+                <VBox alignment="TOP_CENTER">
+                    <Label fx:id="nameLabel" VBox.vgrow="ALWAYS" maxHeight="Infinity" text="Фамилия Имя Отчество"/>
+                    <TextField fx:id="nameInput" VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
+                    <Label fx:id="groupLabel" VBox.vgrow="ALWAYS" maxHeight="Infinity" text="Группа"/>
+                    <TextField fx:id="groupInput" VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
+                    <HBox>
+                        <Region HBox.hgrow="ALWAYS" />
+                        <BorderPane>
+                            <padding>
+                                <Insets top="20" right="20" bottom="20" left="20"/>
+                            </padding>
+                            <top>
+                                <Label fx:id="configLabel" text="Конфигурация"/>
+                            </top>
+                            <left>
+                                <Button fx:id="localConfigButton" text="Конфигуратор"/>
+                            </left>
+                            <right>
+                                <Button fx:id="serverConfigButton" text="Сервер"/>
+                            </right>
+                        </BorderPane>
+                        <BorderPane>
+                            <padding>
+                                <Insets top="20" right="20" bottom="20" left="20"/>
+                            </padding>
+                            <top>
+                                <Label fx:id="runLabel" text="Запуск лабораторной работы"/>
+                            </top>
+                            <left>
+                                <Button fx:id="localRunButton" text="Локальный"/>
+                            </left>
+                            <right>
+                                <Button fx:id="serverRunButton" text="Удалённый"/>
+                            </right>
+                        </BorderPane>
+                        <Region HBox.hgrow="ALWAYS" />
+                    </HBox>
+                </VBox>
+            </VBox>
+        </Scene>
+    </scene>
+</Stage>
