--- a/desktopApp/src/main/resources/view/draw/main.fxml
+++ b/desktopApp/src/main/resources/view/draw/main.fxml
@@ -5,9 +5,12 @@
 
 <?import javafx.scene.Group?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1">
+    <right>
+
+    </right>
     <center>
         <Group>
-            <Label fx:id="nameNew" text="Таб-рисовалка"/>
+            <Label fx:id="nameNew" text="Рисовалка"/>
         </Group>
     </center>
 </BorderPane>
