--- a/desktopApp/src/main/resources/view/lab/main.fxml
+++ b/desktopApp/src/main/resources/view/lab/main.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TabPane?>
-
 <VBox alignment="center" minWidth="1000" minHeight="600" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.lab.LabController">
-    <TabPane>
-    </TabPane>
+    <HBox>
+        <Button fx:id="CpuButton" text="CPU"> </Button>
+    </HBox>
 </VBox>
