--- a/desktopApp/src/main/resources/view/drawComputerSystemWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/drawComputerSystemWindow/main.fxml
@@ -4,8 +4,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import kurlyk.view.common.component.OnlyDoubleTextField?>
-<VBox alignment="center" minWidth="1000" minHeight="600" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.lab.LabController">
+<VBox alignment="center" minWidth="1000" minHeight="600" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.drawComputerSystemWindow.DrawComputerSystemController">
     <BorderPane fx:id="root" VBox.vgrow="ALWAYS">
+        <top>
+
+        </top>
         <right>
             <VBox fx:id="toolPanel">
                 <Button fx:id="cpuButton" text="CPU" maxWidth="Infinity"> </Button>
