--- a/desktopApp/src/main/resources/view/signInWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/signInWindow/main.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.BorderPane?>
+
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.Region?>
-
-
-<VBox alignment="center" minWidth="500" minHeight="300" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.signIn.SignInController">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<VBox alignment="center" minWidth="500" minHeight="300" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.signInWindow.SignInController">
     <VBox alignment="TOP_CENTER">
         <Label fx:id="nameLabel" VBox.vgrow="ALWAYS" maxHeight="Infinity" text="Фамилия Имя Отчество"/>
         <TextField fx:id="nameInput" VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
