--- a/desktopApp/src/main/resources/view/checkWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/checkWindow/main.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="center" minWidth="1000" minHeight="600" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.checkWindow.CheckController">
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.checkWindow.CheckController">
+    <Button fx:id="button"></Button>
     <VBox fx:id="root" alignment="TOP_CENTER">
 
     </VBox>
