--- a/desktopApp/src/main/resources/view/formulaWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/formulaWindow/main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
-<VBox alignment="center" minWidth="1000" minHeight="600" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.formulaWindow.FormulaController">
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.formulaWindow.FormulaController">
     <StackPane>
         <WebView fx:id="browser"/>
     </StackPane>
