--- a/desktopApp/src/main/resources/view/radioWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/radioWindow/main.fxml
@@ -2,7 +2,7 @@
 
 
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="center" minWidth="1000" minHeight="600" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.radioWindow.RadioController">
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.radioWindow.RadioController">
     <VBox fx:id="root" alignment="TOP_CENTER">
 
     </VBox>
