--- a/desktopApp/src/main/resources/view/textWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/textWindow/main.fxml
@@ -3,7 +3,7 @@
 
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="center" minWidth="1000" minHeight="600" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.textWindow.TextController">
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.textWindow.TextController">
     <TextField fx:id="inputField" VBox.vgrow="ALWAYS">
 
     </TextField>
