--- a/desktopApp/src/main/resources/view/startWindow/student/main.fxml
+++ b/desktopApp/src/main/resources/view/startWindow/student/main.fxml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<VBox prefWidth="400" prefHeight="400" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.startWindow.student.StartStudentController">
+<VBox prefHeight="400" prefWidth="400" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.startWindow.student.StartStudentController">
     <VBox alignment="TOP_CENTER">
         <AnchorPane layoutX="10.0" layoutY="116.0" prefHeight="48.0" prefWidth="800.0">
             <children>
-                <Label contentDisplay="TOP" layoutX="314.0" layoutY="13.0" prefHeight="21.0" prefWidth="62.0" text="Лаба">
+                <Label contentDisplay="TOP" layoutX="162.0" layoutY="14.0" prefHeight="21.0" prefWidth="38.0" text="Лаба">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="labNumber" layoutX="400.0" layoutY="11.0" />
+                <ComboBox fx:id="labNumber" layoutX="200.0" layoutY="12.0" />
             </children>
         </AnchorPane>
         <AnchorPane layoutX="10.0" layoutY="212.0" prefHeight="48.0" prefWidth="800.0">
             <children>
-                <Button fx:id="further" alignment="CENTER" layoutX="342.0" layoutY="14.0" text="Далее" />
+                <Button fx:id="further" alignment="CENTER" layoutX="175.0" layoutY="12.0" text="Далее" />
             </children>
         </AnchorPane>
     </VBox>
