--- a/desktopApp/src/main/resources/view/task/checkWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/checkWindow/main.fxml
@@ -2,10 +2,25 @@
 
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.checkWindow.CheckController">
-    <Button fx:id="button"></Button>
+    <HBox>
+        <TextArea fx:id="textArea" HBox.hgrow="ALWAYS">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </TextArea>
+    </HBox>
     <VBox fx:id="root" alignment="TOP_CENTER">
 
     </VBox>
+    <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+        <Button fx:id="submit" text="Ответ">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Button>
+    </HBox>
 </VBox>
