--- a/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
@@ -3,28 +3,40 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <?import kurlyk.view.common.component.NumberField?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.computerSystemDiagramWindow.ComputerSystemDiagramController">
-    <BorderPane fx:id="root" VBox.vgrow="ALWAYS">
-        <top>
-
-        </top>
-        <right>
-            <VBox fx:id="toolPanel">
-                <Button fx:id="cpuButton" text="CPU" maxWidth="Infinity"> </Button>
-                <Button fx:id="ramButton" text="RAM" maxWidth="Infinity"> </Button>
-                <Button fx:id="ioButton" text="IO" maxWidth="Infinity"> </Button>
-                <Button fx:id="pointButton" text="POINT" maxWidth="Infinity"> </Button>
-                <NumberField fx:id="availabilityFactorField" > </NumberField>
-                <Button fx:id="connect" text="CONNECT" maxWidth="Infinity"> </Button>
-            </VBox>
-        </right>
-        <center>
-            <ScrollPane fx:id="scrollPanel">
-                <AnchorPane fx:id="drawPanel">
-
-                </AnchorPane>
-            </ScrollPane>
-        </center>
-    </BorderPane>
+    <HBox>
+        <TextArea fx:id="textArea" HBox.hgrow="ALWAYS">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </TextArea>
+    </HBox>
+    <VBox fx:id="root" alignment="TOP_CENTER">
+        <BorderPane fx:id="drawPlace" VBox.vgrow="ALWAYS">
+            <right>
+                <VBox fx:id="toolPanel">
+                    <Button fx:id="cpuButton" text="CPU" maxWidth="Infinity"> </Button>
+                    <Button fx:id="ramButton" text="RAM" maxWidth="Infinity"> </Button>
+                    <Button fx:id="ioButton" text="IO" maxWidth="Infinity"> </Button>
+                    <Button fx:id="pointButton" text="POINT" maxWidth="Infinity"> </Button>
+                    <NumberField fx:id="availabilityFactorField" > </NumberField>
+                    <Button fx:id="connect" text="CONNECT" maxWidth="Infinity"> </Button>
+                </VBox>
+            </right>
+            <center>
+                <ScrollPane fx:id="scrollPanel">
+                    <AnchorPane fx:id="drawPanel"/>
+                </ScrollPane>
+            </center>
+        </BorderPane>
+    </VBox>
+    <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+        <Button fx:id="submit" text="Ответ">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Button>
+    </HBox>
 </VBox>
