--- a/desktopApp/src/main/resources/view/task/matchingWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/matchingWindow/main.fxml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <?import kurlyk.common.classesMadeByStas.DraggingListView?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.matchingWindow.MatchingController">
     <HBox>
-        <DraggingListView fx:id="leftField" HBox.hgrow="ALWAYS"/>
-        <DraggingListView fx:id="rightField" HBox.hgrow="ALWAYS"/>
+        <TextArea fx:id="textArea" HBox.hgrow="ALWAYS">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </TextArea>
+    </HBox>
+    <VBox fx:id="root" alignment="TOP_CENTER">
+        <HBox>
+            <DraggingListView fx:id="leftField" HBox.hgrow="ALWAYS"/>
+            <DraggingListView fx:id="rightField" HBox.hgrow="ALWAYS"/>
+        </HBox>
+    </VBox>
+    <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+        <Button fx:id="submit" text="Ответ">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Button>
     </HBox>
 </VBox>
