--- a/desktopApp/src/main/resources/view/task/textWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/textWindow/main.fxml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.textWindow.TextController">
-    <TextField fx:id="inputField" VBox.vgrow="ALWAYS">
-
-    </TextField>
+    <HBox>
+        <TextArea fx:id="textArea" HBox.hgrow="ALWAYS">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </TextArea>
+    </HBox>
+    <VBox fx:id="root" alignment="TOP_CENTER">
+        <TextField fx:id="inputField" VBox.vgrow="ALWAYS"/>
+    </VBox>
+    <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+        <Button fx:id="submit" text="Ответ">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Button>
+    </HBox>
 </VBox>
