--- a/desktopApp/src/main/resources/view/startWindow/student/main.fxml
+++ b/desktopApp/src/main/resources/view/startWindow/student/main.fxml
@@ -3,25 +3,28 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<VBox prefHeight="400" prefWidth="400" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.startWindow.student.StartStudentController">
-    <VBox alignment="TOP_CENTER">
-        <AnchorPane layoutX="10.0" layoutY="116.0" prefHeight="48.0" prefWidth="800.0">
-            <children>
-                <Label contentDisplay="TOP" layoutX="162.0" layoutY="14.0" prefHeight="21.0" prefWidth="38.0" text="Лаба">
+<VBox prefHeight="166.0" prefWidth="400" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.startWindow.student.StartStudentController">
+    <VBox alignment="TOP_CENTER" prefHeight="147.0" prefWidth="400.0">
+      <AnchorPane prefHeight="49.0" prefWidth="400.0">
+         <children>
+                <Label contentDisplay="TOP" layoutX="121.0" layoutY="14.0" prefHeight="21.0" prefWidth="158.0" text="Лабораторная работа">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="labNumber" layoutX="200.0" layoutY="12.0" />
+         </children>
+      </AnchorPane>
+        <AnchorPane layoutX="10.0" layoutY="116.0" prefHeight="48.0" prefWidth="800.0">
+            <children>
+                <ComboBox fx:id="labNumber" layoutX="175.0" layoutY="12.0" />
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="10.0" layoutY="212.0" prefHeight="48.0" prefWidth="800.0">
-            <children>
-                <Button fx:id="further" alignment="CENTER" layoutX="175.0" layoutY="12.0" text="Далее" />
-            </children>
+        <AnchorPane layoutX="10.0" layoutY="212.0" prefHeight="44.0" prefWidth="400.0">
+         <children>
+                <Button fx:id="further" alignment="CENTER" layoutX="175.0" layoutY="11.0" text="Далее" />
+         </children>
         </AnchorPane>
     </VBox>
 </VBox>
