--- a/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/characteristicWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/characteristicWindow/main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-<VBox alignment="TOP_CENTER" minWidth="500" minHeight="400" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.question.computerSystemDiagramWindow.characteristicWindow.CharacteristicController">
+<VBox alignment="TOP_CENTER" minWidth="500" minHeight="400" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.computerSystemDiagramWindow.characteristicWindow.CharacteristicController">
     <Label text="Параметры" style="-fx-font-size: 20px;"> </Label>
     <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
     <GridPane fx:id="characteristicTable" style="-fx-font-size: 20px;">
