--- a/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/computerSystemDiagramWindow/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import kurlyk.view.common.component.NumberField?>
-<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.question.computerSystemDiagramWindow.ComputerSystemDiagramController">
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.computerSystemDiagramWindow.ComputerSystemDiagramController">
     <HBox>
         <TextArea fx:id="textArea" HBox.hgrow="ALWAYS">
             <font>
