--- a/desktopApp/src/main/resources/view/task/matchingWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/matchingWindow/main.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import kurlyk.common.classesMadeByStas.DraggingListView?>
-<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.question.matchingWindow.MatchingController">
+<?import kurlyk.view.common.component.DraggingListView?>
+<VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.matchingWindow.MatchingController">
     <HBox>
         <TextArea fx:id="textArea" HBox.hgrow="ALWAYS">
             <font>
