--- a/desktopApp/src/main/resources/view/task/matchingWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/matchingWindow/main.fxml
@@ -2,17 +2,15 @@
 
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import kurlyk.view.common.component.DraggingListView?>
+<?import kurlyk.view.common.component.MyHTMLEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.matchingWindow.MatchingController">
     <HBox>
-        <TextArea fx:id="textArea" HBox.hgrow="ALWAYS">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </TextArea>
+        <MyHTMLEditor fx:id="textArea" HBox.hgrow="ALWAYS">
+
+        </MyHTMLEditor>
     </HBox>
     <VBox fx:id="root" alignment="TOP_CENTER">
         <HBox>
