--- a/desktopApp/src/main/resources/view/task/radioWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/radioWindow/main.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import kurlyk.view.common.component.MyHTMLEditor?>
+<?import kurlyk.view.common.component.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.radioWindow.RadioController">
     <HBox>
-        <MyHTMLEditor fx:id="textArea" HBox.hgrow="ALWAYS">
+        <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
 
-        </MyHTMLEditor>
+        </MyHtmlEditor>
     </HBox>
     <VBox fx:id="root" alignment="TOP_CENTER">
 
