--- a/desktopApp/src/main/resources/view/task/textWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/textWindow/main.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import kurlyk.view.common.component.MyHTMLEditor?>
+<?import kurlyk.view.common.component.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.textWindow.TextController">
     <HBox>
-        <MyHTMLEditor fx:id="textArea" HBox.hgrow="ALWAYS">
+        <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
 
-        </MyHTMLEditor>
+        </MyHtmlEditor>
     </HBox>
     <VBox fx:id="root" alignment="TOP_CENTER">
         <TextField fx:id="inputField" VBox.vgrow="ALWAYS"/>
