--- a/desktopApp/src/main/resources/view/task/checkWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/checkWindow/main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import kurlyk.view.common.component.MyHtmlEditor?>
+<?import kurlyk.view.components.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.checkWindow.CheckController">
     <HBox>
         <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
