--- a/desktopApp/src/main/resources/view/task/formulaWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/formulaWindow/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
-<?import kurlyk.view.common.component.MyHtmlEditor?>
+<?import kurlyk.view.components.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.formulaWindow.FormulaController">
     <HBox>
         <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
