--- a/desktopApp/src/main/resources/view/task/numberWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/numberWindow/main.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import kurlyk.view.common.component.DoubleField?>
-<?import kurlyk.view.common.component.MyHtmlEditor?>
+<?import kurlyk.view.components.DoubleField?>
+<?import kurlyk.view.components.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.numberWindow.NumberController">
     <HBox>
         <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
