--- a/desktopApp/src/main/resources/view/task/radioWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/radioWindow/main.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<?import kurlyk.view.common.component.MyHtmlEditor?>
+<?import kurlyk.view.components.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.radioWindow.RadioController">
     <HBox>
         <MyHtmlEditor fx:id="textArea" HBox.hgrow="ALWAYS">
