--- a/desktopApp/src/main/resources/view/create/createLtqWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/create/createLtqWindow/main.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.layout.GridPane?>
-<GridPane alignment="TOP_CENTER" prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.create.createLtqWindow.CreateLtqController">
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<VBox alignment="TOP_CENTER" prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.create.createLtqWindow.CreateLtqController">
     <GridPane fx:id="root">
 
     </GridPane>
@@ -11,4 +12,4 @@
       <font>
          <Font size="16.0" />
       </font></Button>
-</GridPane>
+</VBox>
