--- a/desktopApp/src/main/resources/view/signInWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/signInWindow/main.fxml
@@ -7,12 +7,12 @@
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="32.0" layoutY="50.0" prefHeight="56.0" prefWidth="241.0" text="Авторизация">
          <font>
-            <Font name="Serif Bold" size="27.0" />
+            <Font name="SansSerif Bold" size="27.0" />
          </font>
       </Label>
       <PasswordField fx:id="passwordField" layoutX="114.0" layoutY="272.0">
          <font>
-            <Font name="Serif Regular" size="14.0" />
+            <Font name="SansSerif Regular" size="14.0" />
          </font>
       </PasswordField>
       <TextField fx:id="loginField" layoutX="114.0" layoutY="211.0">
@@ -22,27 +22,27 @@
       </TextField>
       <Label layoutX="36.0" layoutY="214.0" text="Логин">
          <font>
-            <Font name="Serif Regular" size="18.0" />
+            <Font name="SansSerif Regular" size="18.0" />
          </font>
       </Label>
       <Label layoutX="33.0" layoutY="274.0" text="Пароль">
          <font>
-            <Font name="Serif Regular" size="18.0" />
+            <Font name="SansSerif Regular" size="18.0" />
          </font>
       </Label>
       <Button fx:id="logInButton" disable="true" layoutX="83.0" layoutY="334.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="140.0" text="Войти">
          <font>
-            <Font name="Serif Regular" size="14.0" />
+            <Font name="SansSerif Regular" size="14.0" />
          </font>
       </Button>
       <Button fx:id="logInAsGuestButton" disable="true" layoutX="86.0" layoutY="389.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="140.0" text="Войти, как гость">
          <font>
-            <Font name="Serif Regular" size="14.0" />
+            <Font name="SansSerif Regular" size="14.0" />
          </font>
       </Button>
       <Label fx:id="feedback" alignment="CENTER" contentDisplay="CENTER" layoutX="36.0" layoutY="124.0" prefHeight="63.0" prefWidth="255.0" text="Пользователь не найден" textAlignment="CENTER" textFill="RED" visible="false">
          <font>
-            <Font name="Serif Regular" size="18.0" />
+            <Font name="SansSerif Regular" size="18.0" />
          </font>
       </Label>
    </children>
