--- a/desktopApp/src/main/resources/view/create/createLtqWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/create/createLtqWindow/main.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -8,6 +10,11 @@
     <GridPane fx:id="root">
 
     </GridPane>
+    <TableView fx:id="questionTable" visible="false" prefHeight="456.0" prefWidth="687.0">
+        <columns>
+            <TableColumn fx:id="questionName" prefWidth="609.9999847412109" text="Вопрос" />
+        </columns>
+    </TableView>
     <Button fx:id="submit" alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="150.0" text="Ок" textAlignment="CENTER">
       <font>
          <Font size="16.0" />
