--- a/desktopApp/src/main/resources/view/create/createTaskWindow/questionListWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/create/createTaskWindow/questionListWindow/main.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <VBox prefHeight="504.0" prefWidth="687.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.create.createTaskWindow.questionListWindow.QuestionListController">
@@ -10,6 +8,8 @@
         <AnchorPane layoutX="10.0" layoutY="212.0" prefHeight="48.0" prefWidth="800.0">
             <children>
                 <Button fx:id="ok" alignment="CENTER" layoutX="14.0" layoutY="12.0" text="OK" />
+            <Button fx:id="ok" alignment="CENTER" layoutX="85.0" layoutY="13.0" text="Редактировать" />
+            <Button fx:id="ok" alignment="CENTER" layoutX="215.0" layoutY="12.0" text="Удалить" />
             </children>
         </AnchorPane>
     </VBox>
