СОСИ ХУЙ СУКА ХУЙНЯ ЕБАННАЯ Часть 1

--- a/desktopApp/src/main/resources/view/create/createLabWorkWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/create/createLabWorkWindow/main.fxml
@@ -18,7 +18,7 @@
      <columns>
        <TableColumn fx:id="labWorkNumber" prefWidth="75.0" text="№" />
        <TableColumn fx:id="labWorkName" prefWidth="405.99998474121094" text="Лабораторная работа" />
-         <TableColumn fx:id="labWorkAtemptsNumber" prefWidth="205.0" text="Количество попыток" />
+         <TableColumn fx:id="labWorkAttemptsNumber" prefWidth="205.0" text="Количество попыток" />
      </columns>
    </TableView>
 </VBox>
