--- a/desktopApp/src/main/resources/view/showResultWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/showResultWindow/main.fxml
@@ -7,7 +7,7 @@
     <VBox alignment="TOP_CENTER">
       <AnchorPane prefHeight="37.0" prefWidth="800.0">
          <children>
-            <Label alignment="TOP_LEFT" layoutX="357.0" layoutY="8.0" prefHeight="17.0" prefWidth="87.0" text="Результаты">
+            <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="357.0" layoutY="8.0" prefHeight="17.0" prefWidth="87.0" text="Результат">
                <font>
                   <Font size="15.0" />
                </font>
@@ -16,12 +16,12 @@
       </AnchorPane>
         <AnchorPane prefHeight="48.0" prefWidth="800.0">
             <children>
-                <Label alignment="TOP_LEFT" layoutX="245.0" layoutY="18.0" prefHeight="21.0" prefWidth="155.0" text="Правильных ответов">
+                <Label alignment="TOP_LEFT" layoutX="347.0" layoutY="14.0" prefHeight="21.0" prefWidth="53.0" text="Баллы">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Label>
-                <TextField fx:id="correctAnswerNumber" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="13.0" prefHeight="25.0" prefWidth="257.0">
+                <TextField fx:id="scoreField" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="13.0" prefHeight="25.0" prefWidth="257.0">
                     <font>
                         <Font size="15.0" />
                     </font>
@@ -30,12 +30,12 @@
         </AnchorPane>
         <AnchorPane layoutX="10.0" layoutY="116.0" prefHeight="48.0" prefWidth="800.0">
             <children>
-            <Label alignment="TOP_LEFT" layoutX="230.0" layoutY="12.0" prefHeight="21.0" prefWidth="170.0" text="Неправильных ответов">
+            <Label alignment="TOP_LEFT" layoutX="150.0" layoutY="12.0" prefHeight="21.0" prefWidth="250.0" text="Максимальное количество баллов">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="wrongAnswerNumber" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="7.0" prefHeight="25.0" prefWidth="257.0">
+            <TextField fx:id="maxScoreField" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="7.0" prefHeight="25.0" prefWidth="257.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -44,12 +44,12 @@
         </AnchorPane>
         <AnchorPane layoutX="10.0" layoutY="164.0" prefHeight="48.0" prefWidth="800.0">
             <children>
-                <Label alignment="TOP_LEFT" layoutX="256.0" layoutY="17.0" prefHeight="21.0" prefWidth="144.0" text="Количество баллов">
+                <Label alignment="TOP_LEFT" layoutX="239.0" layoutY="17.0" prefHeight="21.0" prefWidth="161.0" text="Количество вопросов">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Label>
-            <TextField fx:id="score" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="12.0" prefHeight="25.0" prefWidth="257.0">
+            <TextField fx:id="questionNumberField" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="12.0" prefHeight="25.0" prefWidth="257.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -58,12 +58,12 @@
         </AnchorPane>
       <AnchorPane layoutX="10.0" layoutY="143.0" prefHeight="48.0" prefWidth="800.0">
          <children>
-            <Label alignment="TOP_LEFT" layoutX="246.0" layoutY="17.0" prefHeight="21.0" prefWidth="155.0" text="Количество ошибок">
+            <Label alignment="TOP_LEFT" layoutX="190.0" layoutY="17.0" prefHeight="21.0" prefWidth="211.0" text="Количество попыток ответов">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="errorsNumber" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="12.0" prefHeight="25.0" prefWidth="257.0">
+            <TextField fx:id="attemptsNumberField" alignment="TOP_CENTER" editable="false" layoutX="400.0" layoutY="12.0" prefHeight="25.0" prefWidth="257.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -72,7 +72,7 @@
       </AnchorPane>
       <AnchorPane layoutX="10.0" layoutY="191.0" prefHeight="48.0" prefWidth="800.0">
          <children>
-            <Button fx:id="further" layoutX="357.0" layoutY="9.0" mnemonicParsing="false" text="Результат">
+            <Button fx:id="further" layoutX="357.0" layoutY="9.0" mnemonicParsing="false" text="Далее">
                <font>
                   <Font size="15.0" />
                </font>
