--- a/desktopApp/src/main/resources/view/task/formulaWindow/main.fxml
+++ b/desktopApp/src/main/resources/view/task/formulaWindow/main.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.web.WebView?>
 <?import kurlyk.view.components.MyHtmlEditor?>
 <VBox xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kurlyk.view.task.formulaWindow.FormulaController">
@@ -12,17 +12,90 @@
 
         </MyHtmlEditor>
     </HBox>
-   <BorderPane prefHeight="200.0" prefWidth="200.0">
-      <left>
+   <BorderPane prefHeight="199.0" prefWidth="815.0">
+      <center>
           <VBox fx:id="root" alignment="TOP_CENTER" prefHeight="128.0" prefWidth="800.0" BorderPane.alignment="CENTER">
               <StackPane>
-                  <WebView fx:id="browser" />
+                  <WebView fx:id="browser" prefHeight="169.0" prefWidth="1031.0" />
               </StackPane>
           </VBox>
-      </left>
-      <right>
-         <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" text="Сумма = \sum + пробел&#10;Произведение = \prod + пробел&#10;Квадрат = \sqrt + пробел&#10;Верхний индекс = ^&#10;Нижний индекс = _" BorderPane.alignment="CENTER" />
-      </right>
+      </center>
+      <top>
+         <HBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="30.0" prefWidth="1064.0" BorderPane.alignment="CENTER">
+            <children>
+               <Button fx:id="sumButton" mnemonicParsing="false" text="Сумма">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <opaqueInsets>
+                     <Insets top="10.0" />
+                  </opaqueInsets>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="prodButton" mnemonicParsing="false" text="Произведение">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="integralButton" mnemonicParsing="false" text="Интеграл">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="powerButton" mnemonicParsing="false" text="Степень">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="squareButton" mnemonicParsing="false" text="Квадрат числа">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="rootButton" mnemonicParsing="false" text="Корень">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="squareRootButton" mnemonicParsing="false" text="Квадратный корень">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+               <Button fx:id="indexButton" mnemonicParsing="false" text="Индекс">
+                  <font>
+                     <Font size="14.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets left="5.0" right="5.0" />
+                  </HBox.margin>
+               </Button>
+            </children>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+         </HBox>
+      </top>
    </BorderPane>
     <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
         <Button fx:id="submit" text="Ответ">
